--- a/caravan/index.html
+++ b/caravan/index.html
@@ -7,11 +7,21 @@
     <link rel="stylesheet" href="style.css"
 </head>
 <body>
-    <div class="header">
-        <div class="header-top"></div>
-        <div class="header-bottom"></div>
-    </div>
-
+    <header>
+        <h1 class="headline">
+         <a href="index.html">CARAVAN</a>
+    </h1>
+    </header>
+<nav>
+    <ul class="nav-list">
+        <list class="nav-list-item">
+            <a href="index.html">Home</a>
+        </list>
+        <li class="nav-list-item">About</li>
+        <li class="nav-list-item">Topic</li>
+        
+    </ul>
+</nav>
     <div class="main-visual">
         <div class="main-visual-content"></div>
     </div>
@@ -24,8 +34,10 @@
         <div class="sidebar"></div>
      </div>
 
-    <div class="footer"></div>
-
+    
+<footer>
+    <p class="footer-text">© All rights reserved by Infratop.Inc.</p>
+</footer>
 </body>
 </html>
 
