--- a/ex4/index.html
+++ b/ex4/index.html
@@ -3,21 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>４章演習</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
-    <h1>EXAMPLE</h1>
-        <nav>
-            <ol>
-                <li class="headline">MENU1</li>
+    <h1 class="headline">
+        <a href="http://infratop.jp">infratop</a>
+    </h1>
+</header>
+
+<nav>
+    <ul>
+     <li class="headline">MENU1
+         <a href="http://menu"></a>
+     </li>
                 <li class="nav">MENU2</li>
                 <li class="list">MENU3</li>
                 <li class="list-item">MENU4</li>
             </ol>
         </nav>
-</header>
     
 </body>
 </html>
