--- a/caravan/index.html
+++ b/caravan/index.html
@@ -12,8 +12,7 @@
          <a href="http://caravan.op">CARAVAN</a>
         </h1>
     </header>
-
-<nav>
+ <nav>
     <ul class="nav-list">
         <list class="nav-list-item">
             <a href="http://home">Home</a>
@@ -25,7 +24,7 @@
             <a href="http://topic">Topic</a>
         </li>
     </ul>
-</nav>
+ </nav>
     <div class="main-visual">
         <div class="main-visual-content">
             <p class="main-text">
@@ -38,14 +37,84 @@
             </p>
         </div>
     </div>
-    
-    <div class="main-clearfix">
-        <div class="blog"></div>
-        <div class="sidebar"></div>
-    </div>
-<footer>
+    <main class="clearfix">
+     <section class="blog">
+      <h2 class="blog-headline">Recent Blogs</h2>
+      <div class="blog-box">
+       <div class="blog-item clearfix">
+        <img src="img/forest.jpg" class="blog-image">
+        <section class="blog-text">
+         <h3 class="blog-text-headline">
+          <a href="single.html">
+           Hopeful lwssons from<br>
+           the battle to save<br>
+           rainforests
+          </a>
+         </h3>
+         <p class="blog-date">June 19,2017</p>
+         <span class="category">Nature</span>
+        </section>
+       </div>
+       <div class="blog-item clearfix">
+        <img src="img/desert.jpg" class="blog-image">
+        <section class="blog-text">
+         <h3 class="blog-text-headline">
+          <a href="single.html">
+           How to fight<br>
+           desertification and<br>
+           reverse climate change
+          </a>
+         </h3>
+          <p class="blog-date">June 17,2017</p>
+          <span class="category">Nature</span>
+        </section>
+       </div>
+       <div class="blog-item clearfix">
+        <img src="img/sunset.jpg" class="blog-image">
+        <section class="blog-text">
+         <h3 class="blog-text-headline">
+          <a href="single.html">
+           Why I'm rowing<br>
+           across the Pacific
+          </a>
+         </h3>
+         <p class="blog-date">June 16,2017</p>
+         <span class="category">Adventuer</span>
+        </section>
+       </div>
+       <div class="blog-item clearfix">
+        <img src="img/italy.jpg" class="blog-image">
+        <section class="blog-text">
+         <h3 class="blog-text-headline">
+          <a href="single.html">
+           Unseen footage,<br>
+           untamed nature
+          </a>
+         </h3>
+         <p class="blog-date">June 15,2017</p>
+         <span class="category">Nature</span>
+        </section>
+       </div>        
+       <div class="blog-item clearfix">
+        <img src="img/asia.jpg" class="blog-image">
+        <section class="blog-text">
+         <h3 class="blog-text-headline">
+          <a href="single.html">
+           The case for<br>
+           engineering our food
+          </a>
+         </h3>
+         <p class="blog-date">June 14,2017</p>
+         <span class="category">Culture</span>
+        </section>
+       </div>
+      </div>
+     </section>
+     <div class="sidebar"></div>
+    </main>
+ <footer>
     <p class="footer-text">© All rights reserved by Infratop.Inc.</p>
-</footer>
+ </footer>
 </body>
 </html>
 
