--- a/ex6/index.html
+++ b/ex6/index.html
@@ -8,30 +8,30 @@
 </head>
 <body>
 <header>
- <div class="headline"><h1>サービス紹介</h1>
- </div>
+ <section class="headline"><h1>サービス紹介</h1>
+ </section>
 </header>
-<main class="clearfix">
- <div class="webcanp-clearfix">     
+<main>
+ <section class="webcanp">     
   <h2><img class="1" src="img/wc-logo.png"></h2>
   <p>マンツーマンサポートによる学習で、<br>確実にWebスキルを習得できるプログラミングスクールです。</p>
-  <p class="weblink"><a href="index.html">webサイト</a></p>
- </div>   
- <div class="webcanppro-clearfix">     
+  <a href="index.html">webサイト</a>
+ </section>   
+ <section class="webcanppro">     
   <h2><img class="2" src="img/wcp-logo.png"></h2>
   <p>未経験から転職を保証する<br>日本で唯一のプログラミングスクールです。</p>
-  <p class="weblink"><a href="index.html">webサイト</a></p>
-   </div>  
- <div class="webcanpwoman-clearfix">     
+  <a href="index.html">webサイト</a>
+ </section>  
+ <section class="webcanpwoman">     
   <h2><img class="3" src="img/wcw-logo.png"></h2>
   <p>家庭も仕事も頑張りたい主婦・ママ向けの、<br>１ヶ月でWebサイトを制作するWebデザインスクールです。</p>
-  <p class="weblink"><a href="index.html">webサイト</a></p>
- </div>   
- <div class="webcanpcareer-clearfix">     
+  <a href="index.html">webサイト</a>
+ </section>   
+ <section class="webcanpcareer">     
   <h2><img class="４" src="img/wcc-logo.png"></h2>
   <p>３０００名のエンジニアをサポートしてきたエージェントが<br>あなたの転職をサポート。</p>
-  <p class="weblink"><a href="index.html">webサイト</a></p>
- </div>      
+  <a href="index.html">webサイト</a>
+ </section>      
 </main>    
 </body>
 </html>
