--- a/caravan/index.html
+++ b/caravan/index.html
@@ -3,26 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CARAVAN</title>
+    
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
     <link rel="stylesheet" href="style.css"
+    <title>caraban</title>    
 </head>
 <body>
     <header>
         <h1 class="headline">
-         <a href="http://caravan.op">CARAVAN</a>
+         <a href="index.html">CARAVAN</a>
         </h1>
+        <div class="social">
+         <i class="fab fa-facebook-square"></i>
+         <i class="fab fa-twitter-square"></i>
+         <i class="fab fa-instagram"></i>
+         </div>
     </header>
  <nav>
     <ul class="nav-list">
         <list class="nav-list-item">
-            <a href="http://home">Home</a>
+            <a href="index.html">Home</a>
         </list>
-        <li class="nav-list-item">
-            <a href="http://about">About</a>
-        </li>
-        <li class="nav-list-item">
-            <a href="http://topic">Topic</a>
-        </li>
+        <li class="nav-list-item">About</li>
+        <li class="nav-list-item">Topic</li>
     </ul>
  </nav>
     <div class="main-visual">
